--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "plugins": ["emotion"],
+  "plugins": ["emotion", "@babel/plugin-transform-runtime"],
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react",
