--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development --hot",
+    "start": "concurrently \"webpack-dev-server --open --mode development --hot\" \"nodemon server/server.js\"",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,7 +21,9 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
     "eslint": "^7.7.0",
+    "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-testing-library": "^3.7.0",
     "html-loader": "^1.2.1",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.0",
@@ -37,10 +39,13 @@
     "@emotion/core": "^10.0.35",
     "axios": "^0.19.2",
     "babel-jest": "^26.3.0",
+    "concurrently": "^5.3.0",
     "cypress": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
+    "react-youtube": "^7.12.0"
   }
 }
