--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "concurrently \"webpack-dev-server --open --mode development --hot\" \"nodemon server/server.js\"",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "cd server && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
