--- a/package.json
+++ b/package.json
@@ -1,52 +1,24 @@
 {
-  "name": "anime-site",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "start": "concurrently \"webpack-dev-server --open --mode development --hot\" \"nodemon server/server.js\"",
-    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd server && npm install && npm run build"
+    "start": "node /server/server.js",
+    "dev": "concurrently \"cd client && sh node_modules/.bin/webpack-dev-server --open --mode development --hot --entry ./src/index.js\" \"nodemon /server/server.js\"",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@testing-library/jest-dom": "^5.11.3",
-    "@testing-library/react": "^10.4.8",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^4.2.1",
-    "eslint": "^7.7.0",
-    "eslint-plugin-emotion": "^10.0.27",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-testing-library": "^3.7.0",
-    "html-loader": "^1.2.1",
-    "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.4.0",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
   "dependencies": {
-    "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@emotion/core": "^10.0.35",
-    "axios": "^0.19.2",
-    "babel-jest": "^26.3.0",
-    "concurrently": "^5.3.0",
-    "cypress": "^5.0.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.11.0",
-    "react-router-dom": "^5.2.0",
-    "react-youtube": "^7.12.0"
+    "axios": "^0.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0"
   }
 }
