--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node /server/server.js",
+    "start": "node ./server/server.js && cd client && npm install && npm run build",
+    "build": "cd client && npm install && npm run build",
     "dev": "concurrently \"cd client && sh node_modules/.bin/webpack-dev-server --open --mode development --hot --entry ./src/index.js\" \"nodemon /server/server.js\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
