--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-testing-library": "^3.7.0",
+    "file-loader": "^6.1.0",
     "html-loader": "^1.2.1",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.0",
