--- a/client/package.json
+++ b/client/package.json
@@ -34,15 +34,15 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "cypress": "^5.0.0",
+    "babel-jest": "^26.3.0"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.35",
     "axios": "^0.19.2",
-    "babel-jest": "^26.3.0",
     "concurrently": "^5.3.0",
-    "cypress": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
