--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,14 @@
     "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.8",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
+    "cypress": "^5.0.0",
     "eslint": "^7.7.0",
     "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-testing-library": "^3.7.0",
     "file-loader": "^6.1.0",
     "html-loader": "^1.2.1",
@@ -34,9 +37,7 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "cypress": "^5.0.0",
-    "babel-jest": "^26.3.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
