--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server/server.js && cd client && npm install && npm run build",
     "build": "cd client && npm install && npm run build",
-    "dev": "concurrently \"cd client && sh node_modules/.bin/webpack-dev-server --open --mode development --hot --entry ./src/index.js\" \"nodemon /server/server.js\"",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "dev": "concurrently \"cd client && sh node_modules/.bin/webpack-dev-server --open --mode development --hot --entry ./src/index.js\" \"nodemon /server/server.js\""
   },
   "keywords": [],
   "author": "",
@@ -21,8 +20,5 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
-  },
-  "engines": {
-    "node": "12.17.0"
   }
 }
