--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "rewrites": [{ "source": "/server/(.*)", "destination": "/api" }]
+  "builds": [
+    {
+      "src": "/server/server.js",
+      "use": "@now/node"
+    }
+  ],
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/server/server.js" }]
 }
